# notion-ai-assistant

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: spec.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  db.rs  main.rs  model_registry.rs  models.rs  notion.rs  ollama.rs  unsplash.rs
src/components/: BusinessBar.tsx  CommandBar.tsx  GenerateTab.tsx  PresetBar.tsx  SettingsTab.tsx
src/lib/: api.ts  types.ts
