[package]
name = "Notion-AI-Assistant"
version = "0.1.0"
description = "Small-window content prompter: AI agent + Notion, self-hosted per install."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
thiserror = "1"
sysinfo = "0.30"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
